<resources>
	<string name="ac_detail_armor">Armor / Abil</string>
	<string name="ac_detail_base">10 + 1/2 lvl</string>
	<string name="ac_detail_class">Class</string>
	<string name="ac_detail_enh">Enh</string>
	<string name="ac_detail_feat">Feat</string>
	<string name="ac_detail_misc">Misc</string>
	<string name="app_name">D&amp;D 4 Android</string>
	<string name="attack">Attack</string>
	<string name="attack_abil">Abil</string>
	<string name="attack_base">1/2 lvl</string>
	<string name="attack_class">Class</string>
	<string name="attack_damage">Damage</string>
	<string name="attack_enh">Enh</string>
	<string name="attack_feat">Feat</string>
	<string name="attack_misc">Misc</string>
	<string name="attack_name">Name</string>
	<string name="attack_prof">Prof</string>
	<string name="attack_title">New attack</string>
	<string name="attacks_context_menu_delete">Delete</string>
	<string name="attacks_context_menu_open">Open</string>
	<string name="attacks_delete_alert_dialog_message">Are you sure you want to delete this attack?
	</string>
	<string name="attacks_empty">No attack</string>
	<string name="attacks_loading">Loading attacks...</string>
	<string name="attacks_title">Attacks</string>
	<string name="backup_success">Backup successful</string>
	<string name="character_list_item_level">Level</string>
	<string name="characters_context_menu_delete">Delete</string>
	<string name="characters_context_menu_open">Open</string>
	<string name="characters_delete_alert_dialog_message">Are you sure you want to delete this character?
	</string>
	<string name="characters_empty">No character</string>
	<string name="characters_loading">Loading characters...</string>
	<string name="characters_title">Characters</string>
	<string name="damage">Damage</string>
	<string name="equipment_context_menu_delete">Delete</string>
	<string name="equipment_context_menu_open">Open</string>
	<string name="equipment_delete_alert_dialog_message">Are you sure you want to delete this item?</string>
	<string name="equipment_empty">No item</string>
	<string name="equipment_item_description">Effect</string>
	<string name="equipment_item_name">Name</string>
	<string name="equipment_item_title">New item</string>
	<string name="equipment_loading">Loading equipment...</string>
	<string name="equipment_title">Equipment</string>
	<string name="error_attack_create">Failed to create the attack</string>
	<string name="error_attack_delete">Failed to delete the attack</string>
	<string name="error_attack_load">Failed to load the attacks</string>
	<string name="error_attack_refresh">Failed to refresh the attack</string>
	<string name="error_attack_update">Failed to update the attack</string>
	<string name="error_backup">Failed to backup data</string>
	<string name="error_backup_no_external_storage">No external storage available</string>
	<string name="error_character_create">Failed to create the character</string>
	<string name="error_character_delete">Failed to delete the character</string>
	<string name="error_character_load">Failed to load the characters</string>
	<string name="error_character_refresh">Failed to refresh the character</string>
	<string name="error_character_update">Failed to update the character</string>
	<string name="error_equipment_item_create">Failed to create the equipment item</string>
	<string name="error_equipment_item_delete">Failed to delete the equipment item</string>
	<string name="error_equipment_item_refresh">Failed to refresh the equipment item</string>
	<string name="error_equipment_item_update">Failed to update the equipment item</string>
	<string name="error_equipment_load">Failed to load the equipment items</string>
	<string name="error_feat_create">Failed to create the feat</string>
	<string name="error_feat_delete">Failed to delete the feat</string>
	<string name="error_feat_load">Failed to load the feats</string>
	<string name="error_feat_refresh">Failed to refresh the feat</string>
	<string name="error_feat_update">Failed to update the feat</string>
	<string name="error_power_create">Failed to create the power</string>
	<string name="error_power_delete">Failed to delete the power</string>
	<string name="error_power_load">Failed to load the powers</string>
	<string name="error_power_refresh">Failed to refresh the power</string>
	<string name="error_power_update">Failed to update the power</string>
	<string name="error_restore">Failed to restore data</string>
	<string name="error_ritual_create">Failed to create the ritual</string>
	<string name="error_ritual_delete">Failed to delete the ritual</string>
	<string name="error_ritual_load">Failed to load the rituals</string>
	<string name="error_ritual_refresh">Failed to refresh the ritual</string>
	<string name="error_ritual_update">Failed to update the ritual</string>
	<string name="error_skill_create">Failed to create the skill</string>
	<string name="error_skill_load">Failed to load the skills</string>
	<string name="error_skill_refresh">Failed to refresh the skill</string>
	<string name="error_skill_update">Failed to update the skill</string>
	<string name="feat_description">Effect</string>
	<string name="feat_name">Name</string>
	<string name="feat_title">New feat</string>
	<string name="feats_context_menu_delete">Delete</string>
	<string name="feats_context_menu_open">Open</string>
	<string name="feats_delete_alert_dialog_message">Are you sure you want to delete this feat?</string>
	<string name="feats_empty">No feat</string>
	<string name="feats_loading">Loading feats...</string>
	<string name="feats_title">Feats</string>
	<string name="global_menu_backup">Backup</string>
	<string name="global_menu_restore">Restore</string>
	<string name="global_cancel">Cancel</string>
	<string name="global_equals">=</string>
	<string name="global_mult">x</string>
	<string name="global_no">No</string>
	<string name="global_ok">OK</string>
	<string name="global_plus">+</string>
	<string name="global_slash">/</string>
	<string name="global_yes">Yes</string>
	<string name="health_action_points">Action points</string>
	<string name="health_action_points_current">Current</string>
	<string name="health_action_points_max">Max</string>
	<string name="health_death_saving">Death saving fails</string>
	<string name="health_death_saving_short">Death sav</string>
	<string name="health_hp_current">Current HP</string>
	<string name="health_hp_max">Max HP</string>
	<string name="health_hp_temp">Temp HP</string>
	<string name="health_modifiers">Saving throw modifiers and resistances</string>
	<string name="health_modifiers_short">Sav mods and resists</string>
	<string name="health_second_wind">2nd wind</string>
	<string name="health_surge_value">Surge value</string>
	<string name="health_surges_current">Surges</string>
	<string name="health_surges_max">Surges / day</string>
	<string name="health_title">Health</string>
	<string name="hp">HP</string>
	<string name="hp_detail_con">Con</string>
	<string name="hp_detail_base">Base</string>
	<string name="hp_detail_per_level_gained">Per lvl gained</string>
	<string name="hp_detail_class">Class</string>
	<string name="hp_detail_feat">Feat</string>
	<string name="hp_detail_misc">Misc</string>
	<string name="hp_temp">Temp HP</string>
	<string name="identity_class">Class</string>
	<string name="identity_epic_destiny">Epic</string>
	<string name="identity_level">Level</string>
	<string name="identity_misc">Misc</string>
	<string name="identity_name">Name</string>
	<string name="identity_paragon_path">Paragon</string>
	<string name="identity_race">Race</string>
	<string name="identity_title">Identity</string>
	<string name="identity_xp">XP</string>
	<string name="init_detail_ability">Dex</string>
	<string name="init_detail_base">1/2 lvl</string>
	<string name="init_detail_misc">Misc</string>
	<string name="money_astral_diamonds">Astral diamonds</string>
	<string name="money_copper_pieces">Copper pieces</string>
	<string name="money_gold_pieces">Gold pieces</string>
	<string name="money_platinum_pieces">Platinum pieces</string>
	<string name="money_silver_pieces">Silver pieces</string>
	<string name="money_title">Coins</string>
	<string name="mov_detail_armor">Armor</string>
	<string name="mov_detail_base">Base</string>
	<string name="mov_detail_item">Item</string>
	<string name="mov_detail_misc">Misc</string>
	<string name="new_character_class">Class</string>
	<string name="new_character_level">Level</string>
	<string name="new_character_name">Name</string>
	<string name="new_character_race">Race</string>
	<string name="new_character_title">New character</string>
	<string name="notes_title">Notes</string>
	<string name="power_description">Effect</string>
	<string name="power_level">Level</string>
	<string name="power_name">Name</string>
	<string name="power_sort_asc">Ascending</string>
	<string name="power_sort_by_1">Sort by</string>
	<string name="power_sort_by_2">Then by</string>
	<string name="power_sort_desc">Descending</string>
	<string name="power_sort_level">Level</string>
	<string name="power_sort_name">Name</string>
	<string name="power_sort_title">Sort</string>
	<string name="power_sort_type">Type</string>
	<string name="power_title">New power</string>
	<string name="power_type">Type</string>
	<string name="power_type_at_will">At-will</string>
	<string name="power_type_encounter">Encounter</string>
	<string name="power_type_daily">Daily</string>
	<string name="power_used">Used</string>
	<string name="powers_context_menu_delete">Delete</string>
	<string name="powers_context_menu_open">Open</string>
	<string name="powers_context_menu_recover">Recover</string>
	<string name="powers_context_menu_use">Use</string>
	<string name="powers_delete_alert_dialog_message">Are you sure you want to delete this power?
	</string>
	<string name="powers_empty">No power</string>
	<string name="powers_loading">Loading powers...</string>
	<string name="powers_title">Powers</string>
	<string name="purchase_dialog_message">You must purchase this application to use it. Do
		you want to purchase D&amp;D 4 Android now?</string>
	<string name="restore_success">Restore successful, please restart the application</string>
	<string name="ritual_description">Effect</string>
	<string name="ritual_level">Level</string>
	<string name="ritual_list_item_cost">Cost</string>
	<string name="ritual_list_item_time">Time</string>
	<string name="ritual_cost">Cost</string>
	<string name="ritual_duration">Duration</string>
	<string name="ritual_name">Name</string>
	<string name="ritual_skill">Skill</string>
	<string name="ritual_time">Time</string>
	<string name="ritual_title">New ritual</string>
	<string name="rituals_context_menu_delete">Delete</string>
	<string name="rituals_context_menu_open">Open</string>
	<string name="rituals_delete_alert_dialog_message">Are you sure you want to delete this ritual?
	</string>
	<string name="rituals_empty">No ritual</string>
	<string name="rituals_loading">Loading rituals...</string>
	<string name="rituals_title">Rituals</string>
	<string name="score_detail_ability">Abil</string>
	<string name="score_detail_base">10 + 1/2 lvl</string>
	<string name="score_detail_class">Class</string>
	<string name="score_detail_enh">Enh</string>
	<string name="score_detail_feat">Feat</string>
	<string name="score_detail_misc">Misc</string>
	<string name="scores_ability">Abil</string>
	<string name="scores_ability_cha">Cha</string>
	<string name="scores_ability_con">Con</string>
	<string name="scores_ability_dex">Dex</string>
	<string name="scores_ability_int">Int</string>
	<string name="scores_ability_modifier">Mod</string>
	<string name="scores_ability_score">Score</string>
	<string name="scores_ability_str">Str</string>
	<string name="scores_ability_wis">Wis</string>
	<string name="skill_detail_armor_penalty">Armor penalty</string>
	<string name="skill_detail_base">Abil mod + 1/2 lvl</string>
	<string name="skill_detail_misc">Misc</string>
	<string name="skill_detail_trained">Trained (+5)</string>
</resources>