<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:gravity="center_horizontal" android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:orientation="vertical">
	<FrameLayout style="@style/DnDActionBar"
		android:layout_width="match_parent" android:layout_height="wrap_content">
		<com.thomasgallinari.dnd4android.view.widget.StyledTitleTextView
			style="@style/DnDActionBarTextView" android:text="@string/attack"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:gravity="center_vertical" />
	</FrameLayout>
	<LinearLayout style="@style/DnDContent"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
		<TableLayout android:layout_gravity="center_horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:text="@string/attack_base" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:id="@+id/attack_attack_base_text_view"
					android:layout_height="40sp" android:gravity="center" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:text="@string/attack_abil" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:layout_marginLeft="10sp"
					android:layout_marginRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:id="@+id/attack_attack_abil_edit_text"
					android:layout_width="50sp" android:gravity="center"
					android:inputType="numberSigned" android:maxLength="3"
					android:selectAllOnFocus="true" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:layout_marginLeft="10sp" android:gravity="center_vertical|left"
					android:text="@string/attack_feat" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:layout_marginLeft="10sp"
					android:layout_marginRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:id="@+id/attack_attack_feat_edit_text" android:gravity="center"
					android:inputType="numberSigned" android:layout_width="50sp"
					android:maxLength="3" android:selectAllOnFocus="true" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:text="@string/attack_class" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:layout_marginLeft="10sp"
					android:layout_marginRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:id="@+id/attack_attack_class_edit_text"
					android:layout_width="50sp" android:gravity="center"
					android:inputType="numberSigned" android:maxLength="3"
					android:selectAllOnFocus="true" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:layout_marginLeft="10sp" android:gravity="center_vertical|left"
					android:text="@string/attack_enh" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:layout_marginLeft="10sp"
					android:layout_marginRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:id="@+id/attack_attack_enh_edit_text" android:gravity="center"
					android:inputType="numberSigned" android:layout_width="50sp"
					android:maxLength="3" android:selectAllOnFocus="true" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:text="@string/attack_prof" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:layout_marginLeft="10sp"
					android:layout_marginRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:id="@+id/attack_attack_prof_edit_text"
					android:layout_width="50sp" android:gravity="center"
					android:inputType="numberSigned" android:maxLength="3"
					android:selectAllOnFocus="true" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:layout_marginLeft="10sp" android:gravity="center_vertical|left"
					android:text="@string/attack_misc" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:layout_marginLeft="10sp"
					android:layout_marginRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:id="@+id/attack_attack_misc_edit_text" android:gravity="center"
					android:inputType="numberSigned" android:layout_width="50sp"
					android:maxLength="3" android:selectAllOnFocus="true" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:layout_marginLeft="10sp" android:gravity="center_vertical|left"
					android:text="@string/attack" android:layout_column="3" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:layout_marginLeft="10sp"
					android:layout_marginRight="10sp" android:text="@string/global_equals"
					android:layout_column="4" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:id="@+id/attack_attack_total_score_text_view"
					android:gravity="center" android:layout_height="40sp"
					android:layout_column="5" />
			</TableRow>
		</TableLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:orientation="horizontal">
			<com.thomasgallinari.dnd4android.view.widget.StyledButton
				android:id="@+id/attack_attack_ok_button" android:layout_width="100sp"
				android:layout_height="wrap_content" android:text="@string/global_ok" />
			<com.thomasgallinari.dnd4android.view.widget.StyledButton
				android:id="@+id/attack_attack_cancel_button" android:layout_width="100sp"
				android:layout_height="wrap_content" android:text="@string/global_cancel" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
