<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:gravity="center_horizontal" android:layout_height="wrap_content"
	android:layout_width="wrap_content" android:orientation="vertical">
	<FrameLayout style="@style/DnDActionBar"
		android:layout_height="wrap_content" android:layout_width="match_parent">
		<com.thomasgallinari.dnd4android.view.widget.StyledTitleTextView
			style="@style/DnDActionBarTextView" android:id="@+id/skill_detail_title_text_view"
			android:gravity="center_vertical" android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
	</FrameLayout>
	<LinearLayout style="@style/DnDContent"
		android:layout_height="wrap_content" android:layout_width="match_parent"
		android:orientation="vertical">
		<TableLayout android:layout_gravity="center_horizontal"
			android:layout_height="0dp" android:layout_weight="1"
			android:layout_width="wrap_content">
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:text="@string/skill_detail_base" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:id="@+id/skill_detail_abil_score_text_view"
					android:layout_height="40sp" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:layout_gravity="center_vertical|left" android:text="@string/skill_detail_trained" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView />
				<CheckBox android:layout_gravity="center"
					android:id="@+id/skill_detail_trained_check_box" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:text="@string/skill_detail_armor_penalty" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:paddingLeft="10sp"
					android:paddingRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:gravity="center" android:id="@+id/skill_detail_armor_penalty_edit_text"
					android:inputType="numberSigned" android:layout_width="50sp"
					android:maxLength="3" android:selectAllOnFocus="true" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:text="@string/skill_detail_misc" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:paddingLeft="10sp"
					android:paddingRight="10sp" android:text="@string/global_plus" />
				<com.thomasgallinari.dnd4android.view.widget.StyledEditText
					android:gravity="center" android:id="@+id/skill_detail_misc_edit_text"
					android:inputType="numberSigned" android:layout_width="50sp"
					android:maxLength="3" android:selectAllOnFocus="true" />
			</TableRow>
			<TableRow>
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center_vertical|left" android:id="@+id/skill_detail_skill_text_view" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:paddingLeft="10sp"
					android:paddingRight="10sp" android:text="@string/global_equals" />
				<com.thomasgallinari.dnd4android.view.widget.StyledTextView
					android:gravity="center" android:id="@+id/skill_detail_total_text_view"
					android:layout_height="40sp" />
			</TableRow>
		</TableLayout>
		<LinearLayout android:layout_gravity="center"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:orientation="horizontal">
			<com.thomasgallinari.dnd4android.view.widget.StyledButton
				android:id="@+id/skill_detail_ok_button" android:layout_height="wrap_content"
				android:layout_width="100sp" android:text="@string/global_ok" />
			<com.thomasgallinari.dnd4android.view.widget.StyledButton
				android:id="@+id/skill_detail_cancel_button" android:layout_height="wrap_content"
				android:layout_width="100sp" android:text="@string/global_cancel" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
